# otcqx-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
Create `src/commands/: dox.py  get_url.py  infer_financial_page.py  infer_financial_report_url.py
src/: cache_utils.py  fetchers.py  llm_fetchers.py  main.py  make_inference.py  otcqx_analysis.py  tenk_agent.py
src/commands/: get_url.py  infer_financial_report_urls.py  is_fin_report.py
