[project]
name = "otcqx-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "beautifulsoup4>=4.13.3",
    "browser-use>=0.1.40",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "playwright>=1.51.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
